[package]
name = "dayz-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
mlua = { version = "0.9.9", features = ["lua54", "vendored", "send"] }
once_cell = "1.19.0"
retour = { version = "0.3" }
windows = { version = "0.58.0", features = ["Win32_Foundation",
            "Win32_System_Console", "Win32_System_LibraryLoader", "Win32_System_SystemServices",
            "Win32_Graphics_Gdi", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11",
            "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common",
            "Win32_UI_WindowsAndMessaging",
            ] }

[lib]
crate-type = ["cdylib"]
