[package]
name = "dayz-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
once_cell = "1.21"
retour = { version = "0.3" }
windows = { version = "0.61", features = ["Win32_Foundation",
            "Win32_System_Console", "Win32_System_LibraryLoader", "Win32_System_SystemServices",
            "Win32_Graphics_Gdi", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11",
            "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common",
            "Win32_UI_WindowsAndMessaging",
            ] }
skidscan = { git = "https://github.com/WilliamVenner/skidscan.git" }

[lib]
crate-type = ["cdylib"]
